--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -35,6 +36,7 @@
     "@types/react-redux": "^7.1.34",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
+    "eslint-plugin-react-hooks": "^6.1.0",
     "jest": "^30.2.0",
     "sass": "^1.93.2",
     "ts-jest": "^29.4.4",
