--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.13.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
