--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "typeRoots": ["./src/types", "node_modules/@types"],
     "target": "ES2017",
+    "lib": ["ESNext", "DOM"],
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
