--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-query": "^5.90.2",
     "@tanstack/react-query-devtools": "^5.90.2",
+    "axios": "^1.7.2",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -39,6 +40,7 @@
     "eslint-config-next": "15.5.4",
     "eslint-plugin-react-hooks": "^6.1.0",
     "jest": "^30.2.0",
+    "react-scan": "^0.4.3",
     "sass": "^1.93.2",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
